--- a/style.css
+++ b/style.css
@@ -189,3 +189,8 @@ main{
     transform: translateY(0);
     transition: opacity .4s ease, transform .4s ease;
 }
+
+.hide-warning{
+    opacity: 0;
+    transform: translateY(-10px);
+}
