style.css arrumado

--- a/style.css
+++ b/style.css
@@ -1,31 +1,31 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
-:root {
+:root{
     font-size: 62.5%;
-
     --background-primary: #F4F5FB;
-    --background-secondary: #FFF;
-    --color-brand: #CA3884;
-    --color-brand-hover: #A52C6B;
-    --color-danger: #C93847;
-    --content-primary: #080B12;
-    --content-secondary: #374151;
-    --content-tertiary: #9CA3AF;
-    --always-white: #FFF;
-    --border-primary: #D1D5DB;
-    --border-hover: #B9C2D0;
+  --background-secondary: #FFF;
+  --color-brand: #CA3884;
+  --color-brand-hover: #A52C6B;
+  --color-danger: #C93847;
+  --content-primary: #080B12;
+  --content-secondary: #374151;
+  --content-tertiary: #9CA3AF;
+  --always-white: #FFF;
+  --border-primary: #D1D5DB;
+  --border-hover: #B9C2D0;
 }
 
-body {
+body{
     font-size: 1.6rem;
     padding: 3.2rem;
-    background-color: var(--background-primary);
+    background: var(--background-primary);
 }
+
 
 header {
     margin-bottom: 4.4rem;
@@ -34,30 +34,29 @@ header {
     display: flex;
     flex-direction: column;
     align-items: start;
- 
+
     img {
         width: 15.4rem;
         margin-inline: auto;
         margin-bottom: 3rem;
     }
 
-    button {
+    button{
         border: none;
         background: none;
         font-size: 1.4rem;
         line-height: 1.6rem;
         font-weight: 500;
+        margin-bottom: 1.6rem;
         color: var(--color-brand);
         cursor: pointer;
     }
 
-    h1 {
+    h1{
         font-size: 2.4rem;
         color: var(--content-primary);
         line-height: 3.2rem;
     }
-
-
 }
 
 main {
@@ -65,51 +64,52 @@ main {
     margin-inline: auto;
 }
 
-.add-item {
+.add-item{
     margin-bottom: 4rem;
 
-    input {
+    input{
         width: 100%;
         padding: 1.2rem;
         border: 2px solid var(--border-primary);
         border-radius: 1.2rem;
-        margin-bottom: 1.6rem;
+        margin-bottom: 1.5rem;
         outline: none;
         color: var(--content-primary);
-
-        &::placeholder {
+        
+        &::placeholder{
             color: var(--content-tertiary);
         }
 
-        &:hover {
+        &:hover{
             border: 2px solid var(--border-hover);
         }
 
-        &:focus {
-            border: 2px solid var(--color-brand);
+        &:focus{
+            border: 2px solid var(--color-brand)
         }
     }
 
-    button {
+    button{
         background: var(--color-brand);
         border: none;
         color: var(--always-white);
         width: 100%;
         padding: 1rem 2.4rem;
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         line-height: 2rem;
         border-radius: 1.2rem;
         font-weight: 600;
         cursor: pointer;
 
-        &:hover {
+        &:hover{
             background: var(--color-brand-hover);
         }
+
     }
 }
 
-.list {
-    .item {
+.list{
+    .item{
         background: var(--background-secondary);
         padding: 1.2rem;
         margin-bottom: 1.2rem;
@@ -122,58 +122,59 @@ main {
         border-radius: 1.2rem;
         box-shadow: 0 2px 6px rgba(8, 11, 18, 0.2);
         
-
-        div {
+        div{
             display: flex;
             gap: 1.2rem;
             align-items: center;
         }
 
-        input {
+        input{
             display: none;
+
         }
 
-        .custom-checkbox {
+        .custom-checkbox{
             width: 1.6rem;
             height: 1.6rem;
             border: 1px solid var(--border-primary);
-            border-radius: .6rem;
+            border-radius: 0.6rem;
             cursor: pointer;
         }
 
-        label {
+        label{
             cursor: pointer;
         }
 
         div:has(input:checked) {
-        .custom-checkbox {
-            background: var(--color-brand);
-            border: 1px solid var(--color-brand);
-            transition: background .2s ease;
-        }
-
-        label {
+            .custom-checkbox {
+                background: var(--color-brand);
+                border: 1px solid var(--color-brand);
+                transition: background .2s ease;
+            }
+              label {
             text-decoration: line-through;
         }
-     }
-
-     button {
-        background: none;
-        border: none;
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-
-        img {
-            width: 1.4rem;
-            opacity: .7;
         }
-     }
-   }
+
+        button {
+            background: none;
+            border: none;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+
+            img{
+                width: 1.6rem;
+                opacity: .7;
+            }
+        }
+
+      
+    }
 }
 
 .warning {
-    background: var(--color-danger);
+    background:  var(--color-danger);
     color: var(--always-white);
     padding: 1.2rem;
     display: flex;
@@ -186,13 +187,13 @@ main {
     transform: translateY(0);
     transition: opacity .4s ease, transform .4s ease;
 
-    div {
+    div{
         display: flex;
         align-items: center;
         gap: .8rem;
     }
 
-    i {
+    i{
         font-size: 2rem;
     }
 
@@ -202,6 +203,7 @@ main {
         color: var(--always-white);
         cursor: pointer;
     }
+
 }
 
 .hide-warning {
@@ -209,25 +211,28 @@ main {
     transform: translateY(-10px);
 }
 
-@media (min-width: 627px) {
-    header {
-        img {
+
+@media(min-width: 627px) {
+
+    header{
+        img{
             margin-bottom: 6.4rem;
         }
     }
 
-    .add-item {
+    .add-item{
         display: grid;
         grid-template-columns: repeat(10, 1fr);
         gap: 1.6rem;
 
         input {
             margin-bottom: 0;
-            grid-column: 1 / 8;
+            grid-column: 1/8;
         }
 
         button {
-            grid-column: 8 / 11;
+            grid-column: 8/11;
         }
     }
+
 }
